# cpp-playground

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/atomics/: CMakeLists.txt  main.cpp
src/intrinsics/: CMakeLists.txt  main.cpp  mat4.h  simd_vec.cpp  test_mat4.cpp  test_vec.cpp  vec4.h
src/lambdas/: main.cpp
src/matrix_transpose_avx512/: CMakeLists.txt  main.cpp
src/pointer-aliasing/: main.cpp
src/selection-initializer/: main.cpp
src/templates/: main.cpp
src/vector-operators/: main.cpp
