cmake_minimum_required(VERSION 3.5)
project(intrinsics)
add_executable(test_vec test_vec.cpp)
add_executable(test_mat4 test_mat4.cpp)
target_compile_options(test_vec PRIVATE -Wall -Wextra -Werror -std=c++1z -march=native)
target_compile_options(test_mat4 PRIVATE -Wall -Wextra -Werror -std=c++1z -march=native)
